[package]
name = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

axum = { workspace = true }
axum-flash = { workspace = true }
axum-login = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
http-body-util = { workspace = true }
mongo-push-repository = { path = "../review-stream/adapters/mongo-push-repository" }
octocrab = { workspace = true }
rand = { workspace = true, features = ["min_const_gen"] }
review-stream-service = { path = "../review-stream/review-stream-service" }
github-webhook-handler = { path = "../review-stream/adapters/github-webhook-handler" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["add-extension", "cors"] }
tower-livereload = { workspace = true }
tower-sessions = { workspace = true, features = ["mongodb-store"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
web-htmx = { path = "../web-htmx" }
jsonwebtoken = { workspace = true }
