[package]
name = "web-htmx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auth-service = { path = "../auth/auth-service" }
axum = { workspace = true, features = ["multipart"] }
axum-extra = { workspace = true }
axum-flash = { workspace = true }
axum-login = { workspace = true }
axum-macros = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
mongo-user-repository = { path = "../auth/adapters/mongo-user-repository" }
once_cell = { workspace = true }
reqwest = { workspace = true }
review-stream-service = { path = "../review-stream/review-stream-service" }
rscx = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower-livereload = { workspace = true }
tracing = { workspace = true }
validator = { workspace = true }
web-client = { path = "../web-client" }
web-macros = { path = "../web-macros" }
