[package]
name = "github-webhook-handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
http-body-util = { workspace = true }
octocrab = { workspace = true }
review-stream-service = { path = "../../review-stream-service" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["add-extension", "cors"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
