[package]
name = "postgres-user-repository"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
axum-login = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
futures = { workspace = true }
review-stream-service = { path = "../../review-stream-service" }
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, features = ["runtime-tokio", "postgres", "migrate"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4", "fast-rng"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
testcontainers = { workspace = true }
fake = { workspace = true }
